20141123: Create test harnass and a few basic tests
20141122: Update translations (sync with util-linux (git 20141120))
20141120: Update manual page (sync with util-linux (git 20141120))
20141120: Minor code changes (sync with util-linux (git 20141120))
20120812: Bumped up version number to 1.1.5
20120812: Update translations (sync with util-linux (2.21))
20120731: Fix build problems  (sync with util-linux (2.21))
20120719: Update manpage (sync with util-linux (2.21))
20120717: Remaining code restructuring (sync with util-linux (2.21))
20120717: Use xmalloc instead of our own (sync with util-linux (2.21))
20120716: Use static definitions (sync with util-linux (2.21))
20120715: Minor spacing issues resolved (sync with util-linux (2.21))
20120714: Minor code restructuring (sync with util-linux (2.21))
20051107: Bumped up version number to 1.1.4
20051107: Makefile: package target
20051107: Changed email and website to current ones
20051107: Fixed a few typos in the manpage (sync with util-linux (2.12r))
20030123: Bumped up version number to 1.1.3
20030123: Changed WITH_GETTEXT option to WITHOUT_GETTEXT
20030123: Renamed example programs to have the string getopt- prepended
20030123: Manpage: all minus signs are now escaped
20030123: Sync with util-linux (2.11y)
20010329: Bumped up version number to 1.1.2
20010329: Sync with util-linux
20010311: Bumped up version number to 1.1.1
20010311: Fixed stupid compilation error if NLS not selected
20000630: Bumped up version number to 1.1.0
20000630: Ported the Native Language Support patches from util-linux
          They are written by Arkadiusz Miśkiewicz <misiek@pld.org.pl>
20000627: Bumped up version number to 1.0.6
20000627: A few manpage tweaks
20000616: Introduced DESTDIR and directory creation in the Makefile.
19990716: Bumped up version number to 1.0.5
19990622: Made -u work
19990101: Bumped up version number to 1.0.4 (aka. 1.0.3a in util-linux)
19990101: Very small fix in main()
19990101: Updated util-linux Makefile