@@ -1,3 +1,5 @@
+20141124: Detect ambigious long options properly
+          Thanks to Klaus Wulff <dinw.klswlff@dfgh.net>
 20141123: Create test harnass and a few basic tests
 20141122: Update translations (sync with util-linux (git 20141120))
 20141120: Update manual page (sync with util-linux (git 20141120))
